--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-with-apollo": "^5.3.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -32,6 +33,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@types/lodash": "^4.14.179",
     "@types/node": "17.0.21",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
