--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-youtube": "^7.14.0",
+    "sharp": "^0.30.2",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
